[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ProxyPool"
version = "0.1.0"
authors = [
  { name="Mykhailo Razb", email="mykhailo.razb@gmail.com" },
]
description = "Proxy pool to rotate and manage proxies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "none"
Issues = "none"